[project]
name = "research-redis"
version = "0.1.0"
description = ""
authors = [
    {name = "thaiquanghoctap",email = "thaiquanghoctap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
